k8s/academy/.archive/monitoring/gatus/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gatus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.chancey.dev`)
      kind: Rule
      priority: 1
      services:
        - name: gatus
          kind: Service
          port: 80
  tls:
    secretName: status-cert-tls
